--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,18 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_local_notifications: ^19.5.0
+  flutter_map: ^8.2.2
   flutter_polyline_points: ^3.1.0
+  flutter_svg: ^2.2.1
   geocoding: ^4.0.0
   geolocator: ^14.0.2
   google_maps_flutter: ^2.13.1
   google_places_flutter: ^2.1.1
   http: ^1.5.0
   intl: ^0.20.2
+  latlong2: ^0.9.1
+  location: ^8.0.1
+  map_launcher: ^4.4.2
   permission_handler: ^12.0.1
   shared_preferences: ^2.5.3
   uuid: ^4.5.1
