--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_dotenv: ^6.0.0
   flutter_local_notifications: ^19.5.0
   flutter_map: ^8.2.2
   flutter_polyline_points: ^3.1.0
   flutter_svg: ^2.2.1
   geocoding: ^4.0.0
   geolocator: ^14.0.2
+  get_it: ^9.0.5
   google_maps_flutter: ^2.13.1
   google_places_flutter: ^2.1.1
   http: ^1.5.0
@@ -74,6 +76,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
